# mic

./: .gitignore  CHANGELOG.md  build.gradle  gradle.properties  settings.gradle  stderr.txt  逻辑触发器数据流程.drawio  逻辑触发器数据流程.md
app/: CMakeLists.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/data/: rawdict_utf16_65105_freq.txt  valid_utf16.txt
app/src/main/java/com/keanbin/pinyinime/: PinyinDecoderService.java
app/src/main/jni/scpi/: SCPICommandCallBackJava.h  SCPICommandDeal.cpp  com_micsig_tbook_tbookscope_scpi_SCPICommandDeal.h  com_micsig_tbook_tbookscope_scpi_SCPICommandDeal_SCPICommandDealHolder.h  com_micsig_tbook_tbookscope_scpi_SCPICommandDeal_SCPICommandStruct.h
app/src/main/jni/scpi/SCPI_Parser/common/: scpi-def.h  scpi_cmd_auto.cpp  scpi_cmd_bus.cpp  scpi_cmd_bus.h  scpi_cmd_calibrate.cpp  scpi_cmd_calibrate.h  scpi_cmd_chan.cpp  scpi_cmd_chan.h  scpi_cmd_curs.h  scpi_cmd_disp.cpp  scpi_cmd_mask.cpp  scpi_cmd_math.cpp  scpi_cmd_meas.cpp  scpi_cmd_meas.h  scpi_cmd_production.cpp  scpi_cmd_samp.cpp  scpi_cmd_stor.h  scpi_cmd_test.cpp  scpi_cmd_tim.cpp  scpi_cmd_tim.h  scpi_cmd_wav.cpp  scpi_cmd_wav.h
app/src/main/jni/scpi/SCPI_Parser/inc/: error.h  fifo.h  minimal.h  parser.h  types.h  utils_private.h
app/src/main/jni/scpi/SCPI_Parser/src/: debug.c  error.c  minimal.c  utils.c
app/src/main/res/color/: textcolor_centermenu_item.xml  textcolor_centermenu_runstop.xml  textcolor_radiobutton_channel_bus.xml
app/src/main/res/drawable/: bg_radiobutton_serialswordtitle.xml  ic_auto_set_selector.xml  ic_bg_chx_small.xml  ic_bg_serials_large.xml  ic_capture.xml  ic_cursor_shu_selector.xml  ic_electric_quantity.xml  ic_icon_turn_pages.xml  ic_micsig_logo.xml  ic_rectangle_5_data_ch1_nothing.xml  ic_rectangle_5_data_ch2_3_have.xml  ic_rectangle_5_data_ch4_nothing.xml  ic_rectangle_chx_selector.xml  ic_rectangle_fine_selector.xml  ic_rectangle_length_rate.xml  ic_rectangle_state.xml  ic_run_stop_selector.xml  ic_screen_shot_selector.xml  ic_seq_selector.xml  ic_zoom.xml  ic_zoom_selector.xml  layer_cursor_shu_select.xml  layer_quick_save.xml  layer_quick_save_select.xml  layer_screen_shot.xml  layer_screen_shot_select.xml  main_quick_save.xml  main_quick_save_select.xml  main_screen_shot_disable.xml  pointer_icon.xml  selector_bottom_other_channel_left.xml  selector_bottom_other_channel_right.xml  selector_cursor_heng.xml  selector_fine_left.xml  selector_fine_right.xml  selector_fine_up.xml  shape_frame_bg_black.xml  shubiao.xml  svg_cursor_heng.xml  svg_cursorll_shu_select.xml  (+17 more)
app/src/main/res/drawable-nodpi/: ic_bg_ch2_light.xml  ic_bg_ch3_light.xml  ic_bg_ch4_light.xml  ic_bg_ch5_light.xml
app/src/main/res/drawable/main_xml/drawable/: channel2_border.xml  channelmath_disable_border.xml  channelmath_enable_border.xml  textview_border_corner_bottom.xml
app/src/main/res/drawable/menu_right_picture/drawable/: bg_mainright_ref_mv.xml  bg_mainright_ref_v.xml  bg_right_layout_divider.xml  coupling_dc.xml
app/src/main/res/drawable/menu_top_picture/drawable/: bg_centermenu_itemtop.xml  bg_halfmenu_channel.xml  bg_halfmenu_cursor2.xml  bg_halfmenu_level.xml  bg_halfmenu_timebase.xml  timebase_center.xml  timebase_left.xml  timebase_right.xml
app/src/main/res/drawable/rightslipmenu/drawable/: bg_rightslipmenu.xml  bg_rightslipmenu_math_divider.xml  bg_rightslipmenu_math_select.xml  bg_rightslipmenu_s3.xml  bg_rightslipmenu_spi.xml  bg_rightslipmenu_spi_down.xml  bg_rightslipmenu_spi_group_disable.xml  bg_rightslipmenu_spi_h.xml  shape_backgroup_measure_item.xml
app/src/main/res/drawable/top/drawable/: measure_bpw.xml  measure_crms.xml  measure_delay.xml  measure_high.xml  measure_max.xml  measure_nos.xml  measure_npw.xml  measure_phase.xml  measure_pkpk.xml  measure_rms.xml
app/src/main/res/layout/: activity_main.xml  dialog_splash.xml
app/src/main/res/layout/main_screen/drawable/: bg_mainmave_divider.xml
app/src/main/res/layout/main_screen/layout/: bottom_rightchannel_branchs.xml  bottom_rightchannel_masters_eight.xml  bottombar.xml  briefdisplay_text.xml  layout_bottom_math_x.xml  layout_bottom_other_channel.xml  layout_bottom_ref_x.xml  layout_bottom_right_other_channels.xml  main_channel_vertical_scale.xml  measures.xml  middlebar_right.xml  middlebar_rightchannels_double.xml  middlebar_rightchannels_four.xml  middlebar_serialsword.xml  middlebar_wave_zoom.xml  rightslipmenu_channel6.xml  rightslipmenu_channel8.xml  rightslipmenu_level.xml  rightslipmenu_math1.xml  rightslipmenu_math5.xml  rightslipmenu_math8.xml  rightslipmenu_ref3.xml  rightslipmenu_ref5.xml  rightslipmenu_ref6.xml  rightslipmenu_ref7.xml  rightslipmenu_ref8.xml  rightslipmenu_serials1.xml  rightslipmenu_serials2.xml  rightslipmenu_serials4.xml  topslipmenubar_quick.xml
app/src/main/res/layout/rightslipmenu/layout/: dialog_select_color.xml  item_dialogrefrecall.xml  item_select_color.xml  layout_math_channel_advance_math.xml  layout_math_channel_ax_b.xml  layout_math_channel_fft.xml  layout_right_level.xml  layout_right_math.xml  layout_right_ref.xml  layout_right_ref_for_eight.xml  layout_right_serials_lin.xml  layout_right_serials_uart.xml
app/src/main/res/raw/externalkeyupdateinfo/raw/: keyboardinfo.txt  readme.txt
app/src/main/res/raw/sound/raw/: lowvioce.aac  startup.aac
app/src/main/res/values/: styles.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
base/: CMakeLists.txt  build.gradle
base/src/main/cpp/: utils.cpp  utils.h
base/src/main/java/com/micsig/base/: DoubleUtil.java  FLog.java  FileValidateUtil.java  FilterThread.java  HttpUtil.java  Logger.java  NumberUnitParser.java  OEM.java  RxMsgSelect.java  (+5 more)
scope/src/main/cpp/math_ext/: CMakeLists.txt  ClUtils.cpp  ClUtils.h  OpenCLCommon.h
(+1355 files in other folders)
